# pico-e-cli

./: Makefile  README.md
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  ml-example.md
examples/pico-e-cli/: CMakeLists.txt  Makefile  main.c  ml-example.py  picocli.c  picocli.h
examples/pico-e-cli/commands/: systemcommand.c  systemcommand.h  testcommand.c  testcommand.h
examples/pico-e-cli/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
examples/pico-e-cli/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
libraries/: Makefile
libraries/ioLibrary_Driver/Ethernet/W5100S/: w5100s.c
libraries/pico-extras/lib/lwip/src/apps/lwiperf/: lwiperf.c
libraries/pico-sdk/src/rp2_common/hardware_pio/include/hardware/: pio.h
port/: CMakeLists.txt  Makefile  cmake_install.cmake
port/lwip/src/: w5x00_lwip.c
port/pio/: wiznet_spi_pio.c  wiznet_spi_pio.pio  wiznet_spi_pio.pio.static.h
